@@ -165,6 +165,15 @@ void doit(void)
 		if (memcmp(out2.data, hash_data.data, hash_data.size) != 0)
 			fail("Decrypted data don't match original (2)\n");
 
+                /* try again with fixed length API */
+                memset(out2.data, 'A', out2.size);
+		ret = gnutls_privkey_decrypt_data2(privkey, 0, &out, out2.data, out2.size);
+		if (ret < 0)
+			fail("gnutls_privkey_decrypt_data\n");
+
+		if (memcmp(out2.data, hash_data.data, hash_data.size) != 0)
+			fail("Decrypted data don't match original (2b)\n");
+
 		gnutls_free(out.data);
 		gnutls_free(out2.data);
 
@@ -182,6 +191,15 @@ void doit(void)
 
 		if (memcmp(out2.data, raw_data.data, raw_data.size) != 0)
 			fail("Decrypted data don't match original (4)\n");
+
+                /* try again with fixed length API */
+                memset(out2.data, 'A', out2.size);
+		ret = gnutls_privkey_decrypt_data2(privkey, 0, &out, out2.data, out2.size);
+		if (ret < 0)
+			fail("gnutls_privkey_decrypt_data\n");
+
+		if (memcmp(out2.data, raw_data.data, raw_data.size) != 0)
+			fail("Decrypted data don't match original (4b)\n");
 
 		if (debug)
 			success("ok\n");
